--- a/es/musica.html
+++ b/es/musica.html
@@ -161,13 +161,28 @@
             <div class="section" style="text-align: justify;">
               <h4>Música Plurinacional</h4>
               <p>(Pueden aparecer publicidades extranjeras solo en los primeros segundos)</p>
+
+              <h5> Radio: <a href="https://dattavolt.com/8030/stream" target="_blank"><em>Radio Izarra</em></a>.</h5>
+              <a href="https://dattavolt.com/8030/stream" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/acobamba.jpg" alt="Tapa" style="width: 100%;"></a>
+
+              <h5> Radio: <a href="https://servidor27.brlogic.com:7140/live" target="_blank"><em>Rádio Nação Missioneira</em></a>.</h5>
+              <a href="https://servidor27.brlogic.com:7140/live" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/SantoAngelo.jpg" alt="Tapa" style="width: 100%;"></a>
+
+              <h5> Radio: <a href="https://dj91.hostingnuclear.com/9952/stream" target="_blank"><em>Rincón Gaucho</em></a>.</h5>
+              <a href="https://dj91.hostingnuclear.com/9952/stream" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/lanus.jpg" alt="Tapa" style="width: 100%;"></a>
+
+
               <h5> Radio: <a href="https://stream-21.zeno.fm/u1nngtkfp9duv?zs=pjrIHCHKTkG6elMKwOW69w&listening-from-radio-garden=1665234330" target="_blank"><em>El Charco</em></a>.</h5>
               <a href="https://stream-21.zeno.fm/u1nngtkfp9duv?zs=pjrIHCHKTkG6elMKwOW69w&listening-from-radio-garden=1665234330" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/charco.jpg" alt="Tapa" style="width: 100%;"></a>
 
 
-              <!-- <h5> Radio: <a href="https://radio.garden/api/ara/content/listen/PnDyXh75/channel.mp3?r=1&1698002422881" target="_blank"><em>Santo Angelo</em></a>.</h5>
-              <a href="https://radio.garden/api/ara/content/listen/PnDyXh75/channel.mp3?r=1&1698002422881" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/tame.jpg" alt="Tapa" style="width: 100%;"></a>
-              -->
+              <h5> Radio: <a href="http://173.244.208.77:8000/zilipendwa.mp3" target="_blank"><em>Zilipendwa Channel</em></a>.</h5>
+              <a href="http://173.244.208.77:8000/zilipendwa.mp3" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/tanzania.jpg" alt="Tapa" style="width: 100%;"></a>
+
+
+
+              <h5> Radio: <a href="https://stream-152.zeno.fm/9zben9vd1k8uv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiI5emJlbjl2ZDFrOHV2IiwiaG9zdCI6InN0cmVhbS0xNTIuemVuby5mbSIsInJ0dGwiOjUsImp0aSI6IndDR3VKTXYyUTNtT3l1VHRZcy1ld2ciLCJpYXQiOjE3MTY3NTU2NzAsImV4cCI6MTcxNjc1NTczMH0.d5bQdcI1YTGd_BQ-F_6I7fhZtad5sXhSIN1ftRz_vlU" target="_blank"><em>Radio Marimba</em></a>.</h5>
+              <a href="https://stream-152.zeno.fm/9zben9vd1k8uv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiI5emJlbjl2ZDFrOHV2IiwiaG9zdCI6InN0cmVhbS0xNTIuemVuby5mbSIsInJ0dGwiOjUsImp0aSI6IndDR3VKTXYyUTNtT3l1VHRZcy1ld2ciLCJpYXQiOjE3MTY3NTU2NzAsImV4cCI6MTcxNjc1NTczMH0.d5bQdcI1YTGd_BQ-F_6I7fhZtad5sXhSIN1ftRz_vlU" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/barillas.jpg" alt="Tapa" style="width: 100%;"></a>
 
               <h5> Radio: <a href="http://192.99.203.81:8704/stream?listening-from-radio-garden=1665304744" target="_blank"><em>Tame</em></a>.</h5>
               <a href="http://192.99.203.81:8704/stream?listening-from-radio-garden=1665304744" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/tame.jpg" alt="Tapa" style="width: 100%;"></a>
@@ -176,6 +191,7 @@
 
               <h5> Radio: <a href="https://play.streamingcast.live/web/bssradio?listening-from-radio-garden=1665310199" target="_blank"><em>Santo Domingo</em></a>.</h5>
               <a href="https://play.streamingcast.live/web/bssradio?listening-from-radio-garden=1665310199" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/santoDomingo.jpg" alt="Tapa" style="width: 100%;"></a>
+
               <h5> Radio: <a href="https://stream-37.zeno.fm/unde9yxcyzzuv?zs=jc18MZ9tQUy4khWMOLSM1A&listening-from-radio-garden=1666515914" target="_blank"><em>Llamellín</em></a>.</h5>
               <a href="https://stream-37.zeno.fm/unde9yxcyzzuv?zs=jc18MZ9tQUy4khWMOLSM1A&listening-from-radio-garden=1666515914" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/llamellin.jpg" alt="Tapa" style="width: 100%;"></a>
               <h5> Radio: <a href="http://74.122.88.5:3333/;?listening-from-radio-garden=1665235669" target="_blank"><em>Hillsborough</em></a>.</h5>
@@ -199,6 +215,13 @@
               <!-- <h5> Radio: <a href="https://audio2.tustreaming.cl:8036/;?listening-from-radio-garden=1665307491" target="_blank"><em>Villa Maniguales</em></a>.</h5>
               <a href="https://audio2.tustreaming.cl:8036/;?listening-from-radio-garden=1665307491"" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/maniguales.jpg" alt="Tapa" style="width: 100%;"></a>
               -->
+
+              <h5> Radio: <a href="http://tijaniyyah.asuscomm.com:8000/stream/2/;" target="_blank"><em>إذاعة القرآن </em></a>.</h5>
+              <a href="http://tijaniyyah.asuscomm.com:8000/stream/2/;" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/quran.jpg" alt="Tapa" style="width: 100%;"></a>
+
+              <h5> Radio: <a href="https://stream-160.zeno.fm/80c86wkeb9quv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiI4MGM4NndrZWI5cXV2IiwiaG9zdCI6InN0cmVhbS0xNjAuemVuby5mbSIsInJ0dGwiOjUsImp0aSI6ImNoWi1IdnlFVC1XWWVmNlpwVVc4ZHciLCJpYXQiOjE3MTY3NTcxNjUsImV4cCI6MTcxNjc1NzIyNX0.RrDXUhlDNlEH8OWc06S2hjSRK-w1PJUWpr4msBiyGdc" target="_blank"><em>Sadhakashram Radio</em></a>.</h5>
+              <a href="https://stream-160.zeno.fm/80c86wkeb9quv?zt=eyJhbGciOiJIUzI1NiJ9.eyJzdHJlYW0iOiI4MGM4NndrZWI5cXV2IiwiaG9zdCI6InN0cmVhbS0xNjAuemVuby5mbSIsInJ0dGwiOjUsImp0aSI6ImNoWi1IdnlFVC1XWWVmNlpwVVc4ZHciLCJpYXQiOjE3MTY3NTcxNjUsImV4cCI6MTcxNjc1NzIyNX0.RrDXUhlDNlEH8OWc06S2hjSRK-w1PJUWpr4msBiyGdc" target="_blank"><img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/radios/alandi.jpg" alt="Tapa" style="width: 100%;"></a>
+
 
               </div>
               </div>
