--- a/es/expositores.html
+++ b/es/expositores.html
@@ -167,7 +167,6 @@
 
                <div class="column">
                <div class="figure" style="flex: 0.3; margin-right: 10%;margin-left: 10%;margin-bottom: -3%;">
-		                <a href="" target="_blank">
 		                <p><img src="../archivos/2024/expositores/TomasCapretto-foto.png" alt="Capretto" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
@@ -176,7 +175,6 @@
 		                <p class="title">Estadístico de la Universidad Nacional de Rosario, Argentina, trabaja en PyMC Labs, donde utiliza modelos bayesianos para resolver problemas aplicados en diversos sectores.
                     Tomás es también profesor en la Licenciatura en Estadística de la Universidad Nacional de Rosario y colabora con proyectos de código abierto como PyMC, ArviZ y Bambi.
             </p>
-		                </a>
                 </div>
 		        </div>
 
@@ -191,38 +189,36 @@
                     </p>
                 </div>
                 </div>
-
           </div>
-          <div class="row">
 
 
-         <div class="column">
+        <div class="row">
+
+               <div class="column">
                <div class="figure" style="flex: 0.3; margin-right: 10%;margin-left: 10%;margin-bottom: -3%;">
-		                <a href="" target="_blank">
-		                <p><img src="../archivos/2024/expositores/TomasCapretto-foto.png" alt="Capretto" style="width:80%"></p>
+		                <p><img src="../archivos/2024/expositores/EnriqueterHorst.jpg" alt="terHorst" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
 		                <h5 style="margin-bottom: -3%;"><p>Tomas Capretto</p></h5>
 		                <!--<h6><p>Coordinador</p></h6>-->
-		                <p class="title">Ciencias de la Computación Ciencias de la Computación Ciencias de la Computación Ciencias de la Computación<br>Ciencias Antropológicas </p>
-		                </a>
+		                <p class="title">Estadístico de la Universidad Nacional de Rosario, Argentina, trabaja en PyMC Labs, donde utiliza modelos bayesianos para resolver problemas aplicados en diversos sectores.
+                    Tomás es también profesor en la Licenciatura en Estadística de la Universidad Nacional de Rosario y colabora con proyectos de código abierto como PyMC, ArviZ y Bambi.
+            </p>
                 </div>
 		        </div>
 
                 <div class="column">
                 <div class="figure" style="flex: 0.3; margin-right: 10%;margin-left: 10%;margin-bottom: -3%;">
-                    <p><img src="../archivos/2024/expositores/CamilaNeder-crop.jpg" alt="Neder" style="width:80%"></p>
+                    <p><img src="../archivos/2024/expositores/DanielFortuna2.jpeg" alt="Daniel" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-                    <h5 style="margin-bottom: -3%;"><p>Camila Neder</p></h5>
-                    <!--<h6><p>Anfitriona</p></h6>-->
-                    <p>Ciencias de la Computación Ciencias de la Computación Ciencias de la Computación Ciencias de la Computación<br>
-                        Santiago del Estero
+                    <h5 style="margin-bottom: -3%;"><p>Daniel Fortuna</p></h5>
+                    <p>
+                    Licenciado en Economía de la Universidad de Buenos Aires (UBA) y MBA en la Universidad Kuepa (UK) de México. Director de Estudios en el Instituto Privado de la Cámara Argentina de Comercio. Profesor de Estadística para Administradores en la Facultad de Ciencias Económicas de la UBA, contenidista y docente del área de Finanzas de la UK.
                     </p>
                 </div>
                 </div>
-
-            </div>
+          </div>
             <!--<div class="row">-->
 
 
