Expositores, en proceso

--- a/es/expositores.html
+++ b/es/expositores.html
@@ -166,7 +166,7 @@
         <div class="row">
 
                <div class="column">
-               <div class="figure" style="flex: 0.3; margin-right: 10%;margin-left: 10%;margin-bottom: -3%;">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
 		                <p><img src="../archivos/2024/expositores/TomasCapretto-foto.png" alt="Capretto" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
@@ -179,7 +179,7 @@
 		        </div>
 
                 <div class="column">
-                <div class="figure" style="flex: 0.3; margin-right: 10%;margin-left: 10%;margin-bottom: -3%;">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
                     <p><img src="../archivos/2024/expositores/CamilaNeder-crop.jpg" alt="Neder" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
@@ -194,21 +194,72 @@
 
         <div class="row">
 
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/LeilaSofiaAsplanato-foto.jpeg" alt="Leila" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Leila Asplanato</p></h5>
+                    <p>
+                    Licenciada en Física por la Universidad de Buenos Aires, realizó una tesis sobre "Inferencia causal en estudios observacionales usando modelos bayesianos (aplicada a deserción estudiantil)". Actualmente realiza un doctorado en la Universidad Nacional de San Martín, sobre "Modelos de aprendizaje automático e inferencia causal en apoyo a la educación y la formación permanente".
+                    </p>
+                </div>
+                </div>
+
+
                <div class="column">
-               <div class="figure" style="flex: 0.3; margin-right: 10%;margin-left: 10%;margin-bottom: -3%;">
-		                <p><img src="../archivos/2024/expositores/EnriqueterHorst.jpg" alt="terHorst" style="width:80%"></p>
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/EnriqueterHorst-crop.jpg" alt="terHorst" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-		                <h5 style="margin-bottom: -3%;"><p>Tomas Capretto</p></h5>
+		                <h5 style="margin-bottom: -3%;"><p>Enrique ter Horst</p></h5>
 		                <!--<h6><p>Coordinador</p></h6>-->
-		                <p class="title">Estadístico de la Universidad Nacional de Rosario, Argentina, trabaja en PyMC Labs, donde utiliza modelos bayesianos para resolver problemas aplicados en diversos sectores.
-                    Tomás es también profesor en la Licenciatura en Estadística de la Universidad Nacional de Rosario y colabora con proyectos de código abierto como PyMC, ArviZ y Bambi.
-            </p>
+		                <p class="title">Doctor en Estadísticas y Ciencias de la Decisión de Duke University, Enrique ha trabajado en Morgan Stanley, Credit Suisse, e institutos de Adminstración de varios países. Actualmente es Profesor en la Universidad de los Andes, Colombia, especializado en estadísticas empresariales y gestión de riesgos con un enfoque en métodos bayesianos aplicados a las finanzas.</p>
+                </div>
+		        </div>
+          </div>
+
+        <div class="row">
+
+                <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/JuanBekios.jpeg" alt="Bekios" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Juan Bekios Calfa</p></h5>
+		                <!--<h6><p>Coordinador</p></h6>-->
+		                <p class="title">Doctor en Inteligencia Artificial de la Universidad Politécnica de Madrid y licenciado en Ingeniería Civil en Computación e Informática de la Universidad Católica del Norte. Es profesor asistente en la Universidad Católica del Norte desde 1997 y ha recibido premios como la Beca Shell Chile y el Premio a la Excelencia Académica.</p>
+                </div>
+                </div>
+
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/GabrielAlzamendi2-crop.jpg" alt="Gabriel" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Gabriel Alzamendi</p></h5>
+                    <p>
+                    Doctor en Ingeniería y Bioingeniero, es investigador asistente en el Instituto de Investigación y Desarrollo en Bioingeniería y Bioinformática (CONICET-UNER) y docente en la Facultad de Ingeniería de la Universidad Nacional de Entre Ríos. Su trabajo se centra en el modelado de señales biomédicas a partir de la fonación, con múltiples publicaciones científicas.
+                    </p>
+                </div>
+                </div>
+          </div>
+
+          <div class="row">
+
+               <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/MacarenaPiaggio-crop.jpeg" alt="Piaggio" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Macarena Piaggio</p></h5>
+		                <!--<h6><p>Coordinador</p></h6>-->
+		                <p class="title">Licenciatura en Ciencias de la Computación con una tesis sobre "Aproximación de la inferencia en sistemas de recomendación SVD mediante Pasaje de Mensajes Variacionales". Jefa de Trabajos Prácticos de la Universidad de Buenos Aires. Ex becaria en el Instituto de Ciencias de la Computación y en el National Institute of Informatics de Japón.</p>
                 </div>
 		        </div>
 
                 <div class="column">
-                <div class="figure" style="flex: 0.3; margin-right: 10%;margin-left: 10%;margin-bottom: -3%;">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
                     <p><img src="../archivos/2024/expositores/DanielFortuna2.jpeg" alt="Daniel" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
@@ -219,6 +270,90 @@
                 </div>
                 </div>
           </div>
+
+          <div class="row">
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/RafaelTovar-crop.jpg" alt="Tovar" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Rafael Tovar</p></h5>
+                    <p>
+                    Estadístico, Doctor de la Escuela de Estadística, Investigador en la Facultad de Ingenierías Universidad del Valle, Cali Colombia.
+                    </p>
+                </div>
+                </div>
+
+               <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
+               20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/OxanaKrymina-crop.jpg" alt="terHorst" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Oxana Krymina </p></h5>
+                    <!--<h6><p>Coordinador</p></h6>-->
+		                <p class="title">Jefa de Ciencia de Datos Actuariales en la compañía de seguros VSK, Oxana utiliza estadísticas bayesianas para la reserva de pérdidas. Ocupó cargos de científica de datos en el Laboratorio de Consultoría Financiera de MIPT. Oxana obtuvo su maestría en matemáticas de la Universidad Estatal de Moscú en 1997 y actualmente reside en Uruguay.</p>
+                </div>
+		        </div>
+
+          </div>
+
+
+            <div class="row">
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/SergioDavis-crop.jpg" alt="Davis" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Sergio Davis</p></h5>
+                    <p>
+
+                    </p>
+                </div>
+                </div>
+
+               <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
+               20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/LuisUsca-crop.jpg" alt="Usca" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Luis Usca</p></h5>
+                    <!--<h6><p>Coordinador</p></h6>-->
+		                <p class="title"></p>
+                </div>
+		        </div>
+
+          </div>
+
+
+          <div class="row">
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/FernandoRobertoMomo.JPG" alt="Tovar" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Fernando Momo</p></h5>
+                    <p>
+
+                    </p>
+                </div>
+                </div>
+
+               <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
+               20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/GustavoLandfried.jpg" alt="Landfried" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Gustavo Landfried</p></h5>
+                    <!--<h6><p>Coordinador</p></h6>-->
+		                <p class="title"></p>
+                </div>
+		        </div>
+
+          </div>
+
             <!--<div class="row">-->
 
 
