--- a/es/expositores.html
+++ b/es/expositores.html
@@ -307,7 +307,38 @@
                 <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
                     <h5 style="margin-bottom: -3%;"><p>Sergio Davis</p></h5>
                     <p>
+                    Ingeniero Físico por la Universidad de Santiago y Doctor en Física por el Royal Institute of Technology de Suecia, trabajó en la Universidad de Chile. Actualmente es Investigador de la Comisión Chilena de Energía Nuclear, y Profesor en la Universidad Andrés Bello publicando cerca de 100 artículos científicos sobre Física Estadística, Teoría de Información, entre otros.
+                    </p>
+                </div>
+                </div>
 
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/FranciscoHernanOrtegaCulaciati-crop.jpg" alt="Davis" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>Francisco Ortega Culaciati</p></h5>
+                    <p>
+                    Ingeniero Civil y Doctor en Geofísica, actualmente profesor en la Universidad de Chile, especializado en tectónica activa, geodesia y modelización de terremotos. Ha liderado diversos proyectos de investigación y publicado numerosas contribuciones científicas en el campo de la deformación sísmica y la estimación del deslizamiento de fallas.
+                    </p>
+                </div>
+                </div>
+
+
+
+
+          </div>
+
+           <div class="row">
+                <div class="column">
+                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left: 20%;margin-bottom: -3%;">
+                    <p><img src="../archivos/2024/expositores/JosefinaLacasa.png" alt="Davis" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+                    <h5 style="margin-bottom: -3%;"><p>
+                    Josefina Lacasa</p></h5>
+                    <p>
+                    Profesora asistente en el Departamento de Estadística de Kansas State University y Doctora en Agronomía y magister en Estadística de la misma institución. Su investigación se centra en modelos de diagnóstico de nutrición de cultivos y ha recibido el premio Nelson Yield-Limiting Factors de la American Society of Agronomy en 2023.
                     </p>
                 </div>
                 </div>
@@ -315,14 +346,34 @@
                <div class="column">
                <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
                20%;margin-bottom: -3%;">
-		                <p><img src="../archivos/2024/expositores/LuisUsca-crop.jpg" alt="Usca" style="width:80%"></p>
+		                <p><img src="../archivos/2024/expositores/LlerzyTorresOme.jpeg" alt="TorresOme" style="width:80%"></p>
                 </div>
                 <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
-		                <h5 style="margin-bottom: -3%;"><p>Luis Usca</p></h5>
-                    <!--<h6><p>Coordinador</p></h6>-->
-		                <p class="title"></p>
+		                <h5 style="margin-bottom: -3%;"><p>Llerzy Torres Ome</p></h5>
+		                <p class="title">
+		                Egresado en Matemática Aplicada de la Universidad Surcolombiana, Magister en Estadística, actualmente cursa un Doctorado en Ciencias Matemáticas en la Universidad del Valle. Docente universitario en matemática y estadística, su trabajo se enfoca en distribuciones de probabilidad previas y en funciones copula <!--Ha sido docente universitario en la Fundación Universitaria Católica Lumens Gentium y la Universidad del Valle, -->
+		                </p>
                 </div>
 		        </div>
+
+
+          </div>
+
+             <div class="row">
+
+               <div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
+               20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/YasminNavareteDiaz-foto.jpg" alt="TorresOme" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Yasmín Navarrete</p></h5>
+		                <p class="title">
+                         Licenciada y Magister en Ciencias Físicas de la Universidad de Chile, actualmente trabaja en el Instituto de Filosofía y Ciencias de la Complejidad de la Comisión Chilena de Energía Atómica. Con 10 años de experiencia docente e investigación en física aplicada a neurociencias y mecánica cuántica, Yasmín se dedica a la divulgación científica.
+		                </p>
+                </div>
+		        </div>
+
 
           </div>
 
@@ -335,7 +386,7 @@
                 <div class="figure" style="flex: 0.3;margin-top: 4%; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
                     <h5 style="margin-bottom: -3%;"><p>Fernando Momo</p></h5>
                     <p>
-
+                    Licenciado y Doctor en Ciencias Biológicas por la Universidad de Buenos Aires, especializado en Ecología Matemática y Ecología Teórica, ha publicado más de 80 trabajos científicas y libros sobre ecología y sistemas complejos. Presidió la Asociación Argentina de Ecología y la Sociedad Latinoamericana de Biomatemática. Actualmente es Profesor Emérito de la Universidad Nacional de Luján.
                     </p>
                 </div>
                 </div>
@@ -347,10 +398,25 @@
                 </div>
                 <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
 		                <h5 style="margin-bottom: -3%;"><p>Gustavo Landfried</p></h5>
-                    <!--<h6><p>Coordinador</p></h6>-->
-		                <p class="title"></p>
+		                <p class="title">
+		                Licenciado en Antropología Social y Doctor en Ciencias de la Computación por la Universidad de Buenos Aires, Gustavo  es actualmente investigador y docente en el Departamento de Computación.
+		                Su trabajo se enfoca en la aplicación de los métodos bayesianos en campos como la salud, los deportes y la educación. Cofundador de Bayes Plurinacional.
+		                </p>
                 </div>
 		        </div>
+
+		        <!--<div class="column">
+               <div class="figure" style="flex: 0.3; margin-right: 20%;margin-left:
+               20%;margin-bottom: -3%;">
+		                <p><img src="../archivos/2024/expositores/LuisUsca-crop.jpg" alt="Usca" style="width:80%"></p>
+                </div>
+                <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%;margin-bottom: 10%;">
+		                <h5 style="margin-bottom: -3%;"><p>Luis Usca</p></h5>
+                        <p class="title">
+		                Biólogo marino especializado en pesquerías comerciales y en investigaciones sobre edad y crecimiento de recursos pesqueros, con habilidades en análisis de datos y programación. Actualmente, trabaja como analista en el Instituto del Mar del Perú, con experiencia previa en seguimiento de pesquerías artesanales y procesamiento de datos biológico-pesqueros.
+		                </p>
+                </div>
+		        </div>-->
 
           </div>
 
